--- a/tabletWebStyling.scss
+++ b/tabletWebStyling.scss
@@ -15,8 +15,14 @@
         font-family: Arial, Helvetica, sans-serif;
     }
     header {
-        position: sticky;
+        position: fixed;
         top: 0;
+        left: 0;
+        width: 100%;
+        z-index: 1000;
+        // margin: 0;
+        // padding: 0;
+        box-sizing: border-box;
     }
     .header {
         display: flex;
@@ -53,6 +59,7 @@
         margin: 0 auto;
         max-width: 1500px;
         width: 100%;
+        padding-top: 70px;
     }
 
     .introLine {
@@ -129,38 +136,24 @@
         padding-bottom: 30px;
 
         img {
-            width: 500px;
-            border-radius: 10%;
             border: black 2px solid;
+            width: 100%;
+            height: auto;
         }
-        &--title {
+        &__title {
             text-align: center;
         }
-        &--one {
+        &__one {
             grid-area: 1 / 1 / 2 / 2;
         }
-        &--second {
+        &__second {
             grid-area: 1 / 2 / 2 / 3;
         }
-        &--third {
+        &__third {
             grid-area: 2 / 1 / 3 / 2;
         }
-        &--forth {
+        &__forth {
             grid-area: 2 / 2 / 3 / 3;
-        }
-        &__btn {
-            padding: 10px 20px;
-            border-radius: 10%;
-            color: white;
-            font-size: large;
-            background-color: rgb(1, 8, 102);
-        }
-        &__link {
-            text-decoration: none;
-            color: inherit;
-            &:visited {
-                color: yellow;
-            }
         }
     }
 }
